WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60064
[Qt] Layout tests may timeout if loadFinished receives false
https://bugs.webkit.org/show_bug.cgi?id=60064
Summary
[Qt] Layout tests may timeout if loadFinished receives false
Luiz Agostini
Reported
2011-05-03 14:39:09 PDT
When using layoutTestController.queueLoad(), if QWebPage::loadFinished(bool) receives false then the layout test timout. Because of this it is not possible to write tests for responses containing http codes 204 and 205 for example.
Attachments
patch
(2.84 KB, patch)
2011-05-03 14:49 PDT
,
Luiz Agostini
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Luiz Agostini
Comment 1
2011-05-03 14:49:04 PDT
Created
attachment 92136
[details]
patch
Luiz Agostini
Comment 2
2011-05-03 15:27:32 PDT
Committed
r85667
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug