third_party/WebKit/Tools/DumpRenderTree/qt/LayoutTestControllerQt.cpp
@@ -106,7 +106,7 @@ void LayoutTestController::processWork()
 }
 
 // Called on loadFinished on WebPage
-void LayoutTestController::maybeDump(bool success)
+void LayoutTestController::maybeDump(bool /*success*/)
 {
 
     // This can happen on any of the http/tests/security/window-events-*.html tests, where the test opens
@@ -132,8 +132,7 @@ void LayoutTestController::maybeDump(bool success)
     if (WorkQueue::shared()->count())
         QTimer::singleShot(0, this, SLOT(processWork()));
     else if (!shouldWaitUntilDone()) {
-        if (success)
-            emit done();
+        emit done();
         m_hasDumped = true;
     }
 }
